--- a/PhoneTry_2.html
+++ b/PhoneTry_2.html
@@ -19,13 +19,15 @@
         }
 
         #left-image {
-            max-width: 36%;
+            max-width: 30%;
             margin-top: 10px; /* Doble de espacio desde el borde superior */
+            cursor: pointer;
         }
 
         #right-image {
             max-width: 56%;
             margin-top: 10px; /* Doble de espacio desde el borde superior */
+            cursor: pointer;
         }
 
         #top-rectangle {
@@ -61,20 +63,24 @@
 
         #gray-button {
             background-color: rgb(154, 154, 154);
+            cursor: pointer;
         }
 
         #red-button {
             background-color: rgb(182, 1, 1);
+            cursor: pointer;
         }
 
         #blue-button {
             background-color: rgb(1, 132, 226);
+            cursor: pointer;
         }
 
         #main-image {
             max-width: 90%; /* Centrado y con márgenes menores */
             margin: 0 auto; /* Centro de la pantalla */
             display: block; /* Asegura que la imagen se muestre como bloque */
+            cursor: pointer;
         }
 
         #bottom-bar {
